# shy-ai

./: README.md  pyproject.toml
.github/workflows/: publish.yml
shy_ai/: __init__.py
