[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shy-ai"
version = "0.0.1"
description = "shy-ai"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ido Haber" },
]

[project.urls]
Homepage = "https://github.com/idossha/shy-ai"
